--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   "keywords": [],
   "author": "Daniel Asaboro",
   "license": "ISC",
+  "engines": {
+    "node": ">=14.20.1"
+  },
   "dependencies": {
     "bcrypt": "^5.1.0",
     "cookie-parser": "^1.4.6",
@@ -22,7 +25,7 @@
     "express-validator": "^7.0.1",
     "http-status-codes": "^2.2.0",
     "jsonwebtoken": "^9.0.1",
-    "mongoose": "^7.3.1",
+    "mongoose": "^7.4.3",
     "morgan": "^1.10.0",
     "nodemailer": "^6.9.3",
     "nodemon": "^2.0.22",
